# contract-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  app.py  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  testing.ipynb
frontend/: app.py
indexer/: indexer.py  requirements.txt
model/: __init__.py  embeddings.py  llm.py  reranker.py
notebooks/: testing.ipynb
retriever/: __init__.py  retriever.py
scripts/: build_index.py  run_cli.py
src/contract_copilot/: __init__.py  cli.py  qdrant_sparse.py
src/contract_copilot/config/: __init__.py  config.py  config.yaml
src/contract_copilot/indexer/: __init__.py  indexer.py  ocr_loader.py
src/contract_copilot/model/: __init__.py  embeddings.py  llm.py  reranker.py
src/contract_copilot/retriever/: __init__.py  bm25.py  hybrid_search.py  retriever.py  vector_search.py
src/contract_copilot/utils/: utils.py
utils/: __init__.py
